2005-10-17  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Fix whitespace in AS_HELP_STRING uses, convert
	all help strings to use AS_HELP_STRING.

2005-10-17  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* Xext/Makefile.am:
	* include/dix-config.h.in
	Add support for more extensions

	* GL/Makefile.am:
	* XTrap/Makefile.am:
	* hw/xfree86/os-support/Makefile.am:
	* hw/xfree86/os-support/bsd/Makefile.am:
	* hw/xfree86/os-support/bus/Makefile.am:
	* hw/xfree86/os-support/linux/Makefile.am:
	* hw/xfree86/os-support/linux/int10/Makefile.am:
	* hw/xfree86/os-support/misc/Makefile.am:
	* hw/xfree86/os-support/solaris/Makefile.am:
	* hw/xfree86/vgahw/Makefile.am:
	* hw/xfree86/x86emu/Makefile.am:
	* os/Makefile.am:
	Add missing files to EXTRA_DIST

2005-10-15  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Change '==' to portable '='.

2005-10-15  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Fix typo and add new Makefiles to AC_OUTPUT

	* XpConfig/C/print/models/HPDJ1600C/Makefile.am:
	Fix typos

	* hw/xfree86/doc/man/Makefile.am:
	Add xorg.conf.man to CLEANFILES

	* Makefile.am:
	* XpConfig/C/print/models/PSspooldir/Makefile.am:
	* Xprint/Makefile.am:
	* hw/xfree86/os-support/Makefile.am:
	* hw/xfree86/os-support/lynxos/Makefile.am:
	* ilbm/Makefile.am:
	* iplan2p4/Makefile.am:
	* miext/Makefile.am:
	* miext/rootless/Makefile.am:
	Add missing files to EXTRA_DIST

2005-10-15  Kristian Høgsberg  <krh@redhat.com>

	* lbx/Makefile.am: Doh, remember to add this file.

2005-10-14  Kristian Høgsberg  <krh@redhat.com>

	* Makefile.am:
	* configure.ac:
	* include/dix-config.h.in:
	* os/Makefile.am: Hook up lbx.

2005-10-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	Set default font path to match the default in the monolith so
	fonts are actually found.

2005-10-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/Makefile.am: 
	* hw/xfree86/doc/Makefile.am: 